<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registeracc.ChooseTypeACC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/text_select_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:gravity="center_horizontal"
            android:text="@string/title_select"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <ImageButton
            android:id="@+id/icon_businessmen_button"
            android:contentDescription="@string/bussines_select_desc"
            android:labelFor="@id/text_name_client"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon_choose_shop" />

        <TextView
            android:id="@+id/text_name_businessman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:gravity="center_horizontal"
            android:text="@string/bussines_select"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold"
            android:textSize="17sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <ImageButton
            android:contentDescription="@string/client_select_desc"
            android:labelFor="@id/text_name_businessman"
            android:id="@+id/icon_client"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/icon_choose_user" />

        <TextView
            android:id="@+id/text_name_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:gravity="center_horizontal"
            android:text="@string/client_select"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>