<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registeracc.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="16dp">

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/hint_tittle_client"
            android:gravity="center_horizontal"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/textViewEmail"
            android:labelFor="@id/client_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/hint_email"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/client_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="password"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/text_password_register_client"
            android:labelFor="@id/client_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/hint_create_password"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/client_register_password"
            android:labelFor="@id/text_password_register_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/text_password_repeat_register"
            android:labelFor="@id/client_register_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/hint_create_password_repeat"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/client_register_password_repeat"
            android:labelFor="@id/text_password_register_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/text_password_repeat_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:labelFor="@id/client_register_password_repeat"
            android:text="@string/title_select"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cliente"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/bussines_select" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_negocio"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/client_select" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorTextUniversalInverse"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"

            app:backgroundTint="@color/colorTextUniversal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>