<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageView
            android:id="@+id/decorative_logo"
            android:contentDescription="@null"
            android:layout_width="303dp"
            android:layout_height="210dp"
            app:srcCompat="@drawable/icon_logo" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorSurfaceBackground" />

        <TextView
            android:id="@+id/textViewEmail"
            android:labelFor="@id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/hint_email"
            android:textColor="@color/colorTextUniversal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:labelFor="@id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_font"
            android:text="@string/hint_password"
            android:textStyle="bold"
            android:textColor="@color/colorTextUniversal" />

        <EditText
            android:id="@+id/login_password"
            android:labelFor="@id/main"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColorHint="@color/white"
            android:textColor="@color/colorTextUniversalInverse"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"

            app:backgroundTint="@color/colorTextUniversal"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorTextUniversalInverse"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"

            app:backgroundTint="@color/colorTextUniversal" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>